Fixed flickering of elements & added FAQ.

--- a/style.css
+++ b/style.css
@@ -17,8 +17,12 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+.main {
+  display: none;
+}
+
 .menubar {
-  position: fixed;
+  position: top;
   top: 0;
   left: 0;
   width: 100%;
@@ -47,7 +51,6 @@ body::-webkit-scrollbar {
 .title {
   font-weight: bold;
   font-size: 37.5px;
-  padding-top: 50px;
   text-align: center;
 }
 
@@ -94,6 +97,7 @@ body::-webkit-scrollbar {
 .txt {
   font-size: 20.5px;
   margin-bottom: 10px;
+  margin-top: 10px;
   text-align: center;
   max-width: 500px;
   margin: auto;
@@ -169,10 +173,4 @@ body::-webkit-scrollbar {
 
 .label:hover {
   color: white;
-}
-
-@media (max-width: 768px) {
-  .form-container {
-    width: 90%; /* Adjust the width for smaller screens */
-  }
 }
